[workspace]
members = [
    "account-decoder",
    "bloom",
    "clap-utils",
    "cli-config",
    "cli-output",
    "client",
    "core",
    "download-utils",
    "entry",
    "faucet",
    "frozen-abi",
    "perf",
    "validator",
    "genesis",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "keygen",
    "ledger",
    "logger",
    "merkle-tree",
    "storage-bigtable",
    "storage-proto",
    "streamer",
    "ledger-tool",
    "measure",
    "metrics",
    "poh",
    "programs/address-lookup-table",
    "programs/compute-budget",
    "programs/config",
    "programs/stake",
    "programs/vote",
    "programs/memo",
    "programs/token",
    "programs/token-account",
    "remote-wallet",
    "rpc",
    "runtime",
    "sdk",
    "send-transaction-service",
    "transaction-status",
    "net-utils",
    "version",
    "cli",
    "rayon-threadlimit",
    "replica-lib",
    "replica-node",
    "test-validator",
    "test-harness",
]

# TODO: Remove once the "simd-accel" feature from the reed-solomon-erasure
# dependency is supported on Apple M1. v2 of the feature resolver is needed to
# specify arch-specific features.
resolver = "2"
