[package]
name = "mundis-account-decoder"
version = "0.9.21"
description = "Mundis account decoder"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
homepage = "https://mundis.io/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
bv = "0.11.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
mundis-config-program = { path = "../programs/config", version = "=0.9.21" }
mundis-sdk = { path = "../sdk", version = "=0.9.21" }
mundis-vote-program = { path = "../programs/vote", version = "=0.9.21" }
mundis-token-program = { path = "../programs/token", version = "=0.9.21" }
thiserror = "1.0"
zstd = "0.9.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
