[package]
name = "mundis-banks-client"
version = "1.9.14"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
borsh = "0.9.1"
futures = "0.3"
mundis-banks-interface = { path = "../banks-interface", version = "=1.9.14" }
mundis-program = { path = "../sdk/program", version = "=1.9.14" }
mundis-sdk = { path = "../sdk", version = "=1.9.14" }
tarpc = { version = "0.27.2", features = ["full"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
mundis-runtime = { path = "../runtime", version = "=1.9.14" }
mundis-banks-server = { path = "../banks-server", version = "=1.9.14" }

[lib]
crate-type = ["lib"]
name = "mundis_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
