[package]
name = "mundis-banks-interface"
version = "1.9.14"
description = "Mundis banks RPC interface"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
mundis-sdk = { path = "../sdk", version = "=1.9.14" }
tarpc = { version = "0.27.2", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "mundis_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
