[package]
name = "mundis-banks-server"
version = "1.9.14"
description = "Mundis banks server"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures = "0.3"
mundis-banks-interface = { path = "../banks-interface", version = "=1.9.14" }
mundis-runtime = { path = "../runtime", version = "=1.9.14" }
mundis-sdk = { path = "../sdk", version = "=1.9.14" }
mundis-send-transaction-service = { path = "../send-transaction-service", version = "=1.9.14" }
tarpc = { version = "0.27.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "mundis_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
