[package]
name = "mundis-bloom"
version = "0.9.23"
description = "Mundis bloom filter"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
bv = { version = "0.11.1", features = ["serde"] }
fnv = "1.0.7"
rand = "0.7.0"
serde = { version = "1.0.133", features = ["rc"] }
rayon = "1.5.1"
serde_derive = "1.0.103"
mundis-frozen-abi = { path = "../frozen-abi", version = "=0.9.23" }
mundis-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=0.9.23" }
mundis-sdk = { path = "../sdk", version = "=0.9.23" }
log = "0.4.14"

[lib]
crate-type = ["lib"]
name = "mundis_bloom"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
rustc_version = "0.4"
