[package]
name = "mundis-clap-utils"
version = "1.9.16"
description = "Mundis utilities for the clap"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
clap = "2.33.0"
rpassword = "5.0"
mundis-perf = { path = "../perf", version = "=1.9.16" }
mundis-remote-wallet = { path = "../remote-wallet", version = "=1.9.16" }
mundis-sdk = { path = "../sdk", version = "=1.9.16" }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"
uriparse = "0.6.3"
url = "2.2.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.2.0"

[lib]
name = "mundis_clap_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
