[package]
name = "mundis-cli-config"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
version = "0.9.22"
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_yaml = "0.8.21"
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.51"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
