[package]
name = "mundis-cli-output"
version = "1.9.18"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
Inflector = "0.11.4"
indicatif = "0.16.2"
semver = "1.0.6"
serde = "1.0.130"
serde_json = "1.0.72"
mundis-account-decoder = { path = "../account-decoder", version = "=1.9.18" }
mundis-clap-utils = { path = "../clap-utils", version = "=1.9.18" }
mundis-client = { path = "../client", version = "=1.9.18" }
mundis-sdk = { path = "../sdk", version = "=1.9.18" }
mundis-transaction-status = { path = "../transaction-status", version = "=1.9.18" }
mundis-vote-program = { path = "../programs/vote", version = "=1.9.18" }
mundis-memo-program = { path = "../programs/memo", version = "=1.9.18" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
