[package]
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
edition = "2021"
name = "mundis-cli"
version = "0.9.29"
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
criterion-stats = "0.3.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
console = "0.15.0"
const_format = "0.2.22"
log = "0.4.14"
humantime = "2.0.1"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
mundis-account-decoder = { path = "../account-decoder", version = "=0.9.29" }
mundis-clap-utils = { path = "../clap-utils", version = "=0.9.29" }
mundis-cli-config = { path = "../cli-config", version = "=0.9.29" }
mundis-cli-output = { path = "../cli-output", version = "=0.9.29" }
mundis-client = { path = "../client", version = "=0.9.29" }
mundis-config-program = { path = "../programs/config", version = "=0.9.29" }
mundis-faucet = { path = "../faucet", version = "=0.9.29" }
mundis-logger = { path = "../logger", version = "=0.9.29" }
mundis-program-runtime = { path = "../program-runtime", version = "=0.9.29" }
mundis-remote-wallet = { path = "../remote-wallet", version = "=0.9.29" }
mundis-sdk = { path = "../sdk", version = "=0.9.29" }
mundis-transaction-status = { path = "../transaction-status", version = "=0.9.29" }
mundis-version = { path = "../version", version = "=0.9.29" }
mundis-vote-program = { path = "../programs/vote", version = "=0.9.29" }
mundis-memo-program = { path = "../programs/memo", version = "=0.9.29" }
mundis-token-program = { path = "../programs/token", version = "=0.9.29" }
mundis-token-account-program = { path = "../programs/token-account", version = "=0.9.29" }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"

[dev-dependencies]
mundis-streamer = { path = "../streamer", version = "=0.9.29" }
mundis-test-validator = { path = "../test-validator", version = "=0.9.29" }
tempfile = "3.2.0"

[[bin]]
name = "mundis"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
