[package]
name = "mundis-client"
version = "1.9.17"
description = "Mundis Client"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
homepage = "https://mundis.io/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.0"
indicatif = "0.16.2"
jsonrpc-core = "18.0.0"
log = "0.4.14"
rayon = "1.5.1"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
mundis-account-decoder = { path = "../account-decoder", version = "=1.9.17" }
mundis-clap-utils = { path = "../clap-utils", version = "=1.9.17" }
mundis-faucet = { path = "../faucet", version = "=1.9.17" }
mundis-net-utils = { path = "../net-utils", version = "=1.9.17" }
mundis-measure = { path = "../measure", version = "=1.9.17" }
mundis-sdk = { path = "../sdk", version = "=1.9.17" }
mundis-transaction-status = { path = "../transaction-status", version = "=1.9.17" }
mundis-version = { path = "../version", version = "=1.9.17" }
mundis-vote-program = { path = "../programs/vote", version = "=1.9.17" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.16.0", features = ["rustls-tls-webpki-roots"] }
url = "2.2.2"

[dev-dependencies]
assert_matches = "1.5.0"
jsonrpc-http-server = "18.0.0"
mundis-logger = { path = "../logger", version = "=1.9.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
