[package]
name = "mundis-core"
version = "0.9.25"
homepage = "https://mundis.io/"
readme = "../README.md"
repository = "https://github.com/mundisnetwork/axis"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
license = "Apache-2.0"
edition = "2021"

[badges]
codecov = { repository = "mundis-foundation/mundis-node", branch = "master", service = "github" }

[dependencies]
ahash = "0.7.6"
base64 = "0.12.3"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
etcd-client = { version = "0.8.1", features = ["tls"]}
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.1"
log = "0.4.14"
lru = "=0.7.1"
rand = "0.7.0"
rand_chacha = "0.2.2"
raptorq = "1.6.4"
rayon = "1.5.1"
retain_mut = "0.1.5"
serde = "1.0.130"
serde_derive = "1.0.103"
mundis-geyser-plugin-manager = { path = "../geyser-plugin-manager", version = "=0.9.25" }
mundis-bloom = { path = "../bloom", version = "=0.9.25" }
mundis-client = { path = "../client", version = "=0.9.25" }
mundis-entry = { path = "../entry", version = "=0.9.25" }
mundis-gossip = { path = "../gossip", version = "=0.9.25" }
mundis-ledger = { path = "../ledger", version = "=0.9.25" }
mundis-logger = { path = "../logger", version = "=0.9.25" }
mundis-measure = { path = "../measure", version = "=0.9.25" }
mundis-metrics = { path = "../metrics", version = "=0.9.25" }
mundis-net-utils = { path = "../net-utils", version = "=0.9.25" }
mundis-perf = { path = "../perf", version = "=0.9.25" }
mundis-poh = { path = "../poh", version = "=0.9.25" }
mundis-program-runtime = { path = "../program-runtime", version = "=0.9.25" }
mundis-rpc = { path = "../rpc", version = "=0.9.25" }
mundis-replica-lib = { path = "../replica-lib", version = "=0.9.25" }
mundis-runtime = { path = "../runtime", version = "=0.9.25" }
mundis-sdk = { path = "../sdk", version = "=0.9.25" }
mundis-frozen-abi = { path = "../frozen-abi", version = "=0.9.25" }
mundis-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=0.9.25" }
mundis-send-transaction-service = { path = "../send-transaction-service", version = "=0.9.25" }
mundis-streamer = { path = "../streamer", version = "=0.9.25" }
mundis-transaction-status = { path = "../transaction-status", version = "=0.9.25" }
mundis-vote-program = { path = "../programs/vote", version = "=0.9.25" }
tempfile = "3.2.0"
thiserror = "1.0"
mundis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=0.9.25" }
sys-info = "0.9.1"
tokio = { version = "~1.14.1", features = ["full"] }
trees = "0.4.2"

[dev-dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc", "ws"] }
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
matches = "0.1.9"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.72"
serial_test = "0.5.1"
mundis-program-runtime = { path = "../program-runtime", version = "=0.9.25" }
mundis-stake-program = { path = "../programs/stake", version = "=0.9.25" }
mundis-version = { path = "../version", version = "=0.9.25" }
static_assertions = "1.1.0"
systemstat = "0.1.10"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
