[package]
name = "mundis-entry"
version = "1.9.14"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.1"
serde = "1.0.130"
mundis-measure = { path = "../measure", version = "=1.9.14" }
mundis-merkle-tree = { path = "../merkle-tree", version = "=1.9.14" }
mundis-metrics = { path = "../metrics", version = "=1.9.14" }
mundis-perf = { path = "../perf", version = "=1.9.14" }
mundis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.14" }
mundis-sdk = { path = "../sdk", version = "=1.9.14" }
bincode = "1.3.3"

[dev-dependencies]
matches = "0.1.9"
mundis-logger = { path = "../logger", version = "=1.9.14" }

[lib]
crate-type = ["lib"]
name = "mundis_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
