[package]
name = "mundis-frozen-abi"
version = "0.9.22"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
homepage = "https://mundis.io/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
bv = { version = "0.11.1", features = ["serde"] }
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.103"
sha2 = "0.9.8"
mundis-frozen-abi-macro = { path = "macro", version = "=0.9.22" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
mundis-logger = { path = "../logger", version = "=0.9.22" }
generic-array = { version = "0.14.4", default-features = false, features = ["serde", "more_lengths"]}
memmap2 = "0.5.0"

[build-dependencies]
rustc_version = "0.4"
