[package]
name = "mundis-genesis-utils"
version = "1.9.14"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
mundis-sdk = { path = "../sdk", version = "=1.9.14" }
mundis-download-utils = { path = "../download-utils", version = "=1.9.14" }
mundis-runtime = { path = "../runtime", version = "=1.9.14" }

[lib]
crate-type = ["lib"]
name = "mundis_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
