[package]
name = "mundis-genesis"
version = "0.9.23"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
base64 = "0.12.3"
clap = "2.33.1"
serde = "1.0.130"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
mundis-clap-utils = { path = "../clap-utils", version = "=0.9.23" }
mundis-cli-config = { path = "../cli-config", version = "=0.9.23" }
mundis-entry = { path = "../entry", version = "=0.9.23" }
mundis-ledger = { path = "../ledger", version = "=0.9.23" }
mundis-logger = { path = "../logger", version = "=0.9.23" }
mundis-runtime = { path = "../runtime", version = "=0.9.23" }
mundis-sdk = { path = "../sdk", version = "=0.9.23" }
mundis-stake-program = { path = "../programs/stake", version = "=0.9.23" }
mundis-version = { path = "../version", version = "=0.9.23" }
mundis-vote-program = { path = "../programs/vote", version = "=0.9.23" }
tempfile = "3.2.0"

[[bin]]
name = "mundis-genesis"
path = "src/main.rs"

[lib]
name = "mundis_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
