[package]
name = "mundis-geyser-plugin-manager"
version = "1.9.16"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
libloading = "0.7.2"
log = "0.4.11"
serde = "1.0.130"
serde_derive = "1.0.103"
serde_json = "1.0.72"
mundis-geyser-plugin-interface = { path = "../geyser-plugin-interface", version = "=1.9.16" }
mundis-logger = { path = "../logger", version = "=1.9.16" }
mundis-measure = { path = "../measure", version = "=1.9.16" }
mundis-metrics = { path = "../metrics", version = "=1.9.16" }
mundis-rpc = { path = "../rpc", version = "=1.9.16" }
mundis-runtime = { path = "../runtime", version = "=1.9.16" }
mundis-sdk = { path = "../sdk", version = "=1.9.16" }
mundis-transaction-status = { path = "../transaction-status", version = "=1.9.16" }
thiserror = "1.0.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
