[package]
name = "mundis-gossip"
version = "1.9.18"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bv = { version = "0.11.1", features = ["serde"] }
clap = "2.33.1"
flate2 = "1.0"
indexmap = { version = "1.7", features = ["rayon"] }
itertools = "0.10.1"
log = "0.4.14"
lru = "0.7.1"
matches = "0.1.9"
num-traits = "0.2"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.1"
serde = "1.0.130"
serde_bytes = "0.11"
serde_derive = "1.0.103"
mundis-bloom = { path = "../bloom", version = "=1.9.18" }
mundis-clap-utils = { path = "../clap-utils", version = "=1.9.18" }
mundis-client = { path = "../client", version = "=1.9.18" }
mundis-entry = { path = "../entry", version = "=1.9.18" }
mundis-frozen-abi = { path = "../frozen-abi", version = "=1.9.18" }
mundis-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.9.18" }
mundis-ledger = { path = "../ledger", version = "=1.9.18" }
mundis-logger = { path = "../logger", version = "=1.9.18" }
mundis-measure = { path = "../measure", version = "=1.9.18" }
mundis-metrics = { path = "../metrics", version = "=1.9.18" }
mundis-net-utils = { path = "../net-utils", version = "=1.9.18" }
mundis-perf = { path = "../perf", version = "=1.9.18" }
mundis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.9.18" }
mundis-runtime = { path = "../runtime", version = "=1.9.18" }
mundis-streamer = { path = "../streamer", version = "=1.9.18" }
mundis-sdk = { path = "../sdk", version = "=1.9.18" }
mundis-version = { path = "../version", version = "=1.9.18" }
mundis-vote-program = { path = "../programs/vote", version = "=1.9.18" }
thiserror = "1.0"

[dev-dependencies]
num_cpus = "1.13.0"
serial_test = "0.5.1"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "crds"

[[bench]]
name = "crds_gossip_pull"

[[bench]]
name = "crds_shards"

[[bin]]
name = "mundis-gossip"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
