[package]
name = "mundis-keygen"
version = "0.9.27"
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
repository = "https://github.com/mundisnetwork/axis"
license = "Apache-2.0"
homepage = "https://mundis.io/"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
clap = "2.33"
dirs-next = "2.0.0"
num_cpus = "1.13.1"
mundis-clap-utils = { path = "../clap-utils", version = "=0.9.27" }
mundis-cli-config = { path = "../cli-config", version = "=0.9.27" }
mundis-remote-wallet = { path = "../remote-wallet", version = "=0.9.27" }
mundis-sdk = { path = "../sdk", version = "=0.9.27" }
mundis-version = { path = "../version", version = "=0.9.27" }
tiny-bip39 = "0.8.2"

[[bin]]
name = "mundis-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
